--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,10 +1,12 @@
 .app {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 0px;
   background-color: #FFFFFF;
 }
 
@@ -15,7 +17,7 @@
   justify-content: space-between;
   width: 100%;
   height: 60x;
-  margin-top: 40px;
+  margin-top: 10px;
   margin-bottom: 40px;
 }
 
@@ -37,8 +39,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 1200px;
-  height: 1200px;
+  width: 800px;
+  height: 800px;
 }
 
 .settings-container {
