--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,4 +1,4 @@
-.app {
+#app {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,7 @@
   background-color: #FFFFFF;
 }
 
-.header {
+#header {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -28,27 +28,125 @@
   justify-content: center;
 }
 
-.logo {
+#logo {
   height: 90px;
   width: auto;
   padding-bottom: 5px;
 }
 
-#webgl-container {
+#main {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 800px;
-  height: 800px;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%
 }
 
-.settings-container {
+#webgl-container {
+  width: 800px;
+  height: 800px;
+  border: 2px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+#settings-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 330px;
+  padding-right: 15px;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+}
+
+.settings-title {
+  width: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.settings-title img {
+  width: 20px;
+  margin-right: 10px;
+  margin-bottom: -4px;
+}
+
+.settings-subtitle {
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.settings-title hr {
+  border: 0.5px solid black;
+  border-radius: 5px;
+}
+
+.settings-subcontainer {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.slider-container {
+  width: 100%;
+  margin: 28px 0px -8px;
+}
+
+.tracer-selectors-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 12px 0px 0px;
+}
+
+.tracer-color-settings-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 150px;
-  height: 55x;
-  padding-right: 10px;
+}
+
+.tracer-color-sliders-container {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: center;
+  width: 180px;
+  margin-bottom: 6px;
+}
+
+.tracer-color-slider {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.tracer-color-slider .slider-container {
+  margin-left: 25px;
+  margin-top: 28px;
+  margin-bottom: -12px;
+}
+
+.tracer-color-preview {
+  position: relative;
+  left: 3px;
+  top: 3px;
+  width: 94px;
+  height: 94px;
+  border-radius: 94px;
+}
+
+.tracer-color-preview-border {
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
+  border-radius: 100px;
+  margin-bottom: -30px;
 }
