--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -5,20 +5,21 @@
   align-content: center;
   height: 55px;
   width: 300px;
+  border: 2px solid black;
   border-radius: 10px;
   overflow: hidden;
   padding: 0px;
   margin: 0px;
-  box-shadow: 0px 0px 20px #CCCCCC;
 }
 
 .toolbar-button {
+
   display: block;
   width: 20%;
   height: 100%;
   border: none;
-  background-color: #F3F3F3;
-  transition: all 0.3s ease;
+  background-color: #FFF;
+  transition: all 0.2s ease;
   padding: 0px;
   margin: 0px;
 }
@@ -35,10 +36,10 @@
   height: 60%;
 }
 
-.active {
-  background-color: #9df800;
+.toolbar-button-active {
+  background-color: #000;
 }
 
-.active:hover {
-  background-color: #92e700;
+.toolbar-button-active:hover {
+  background-color: #222;
 }
