--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -77,6 +77,7 @@
 .settings-subtitle {
   font-weight: 500;
   font-size: 14px;
+  padding-bottom: 10px;
 }
 
 .settings-title hr {
@@ -91,7 +92,7 @@
 
 .slider-container {
   width: 100%;
-  margin: 28px 0px -8px;
+  margin: 20px 0px -8px;
 }
 
 .tracer-selectors-container {
@@ -100,7 +101,6 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin: 12px 0px 0px;
 }
 
 .tracer-color-settings-container {
@@ -108,6 +108,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-top: -10px;
 }
 
 .tracer-color-sliders-container {
