Change cursor behaviour to switch to pointer on interactive elements

--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -13,7 +13,6 @@
 }
 
 .toolbar-button {
-
   display: block;
   width: 20%;
   height: 100%;
@@ -22,6 +21,7 @@
   transition: all 0.2s ease;
   padding: 0px;
   margin: 0px;
+  cursor: pointer;
 }
 
 .toolbar-button:hover {
