--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -12,4 +12,5 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
 }
