--- a/src/components/selector/selector.css
+++ b/src/components/selector/selector.css
@@ -4,7 +4,6 @@
   border: 2px solid black;
   border-radius: 10px;
   padding: 0px;
-  font-size: 12px;
   color: #000;
   overflow: hidden;
 }
@@ -18,7 +17,9 @@
   padding: 0px 15px;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .selector-button:hover {
