--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -8,6 +8,7 @@
   margin-right: auto;
   padding: 0px;
   background-color: #FFFFFF;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 #header {
@@ -21,11 +22,19 @@
   margin-bottom: 40px;
 }
 
-.header-item {
-  width: 33%;
+#tool-size-container {
+  width: 200px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+#tool-size-title {
+  width: 200px;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 0;
 }
 
 #logo {
@@ -92,7 +101,11 @@
 
 .slider-container {
   width: 100%;
-  margin: 20px 0px -8px;
+  margin: 20px 0px 0px;
+}
+
+.slider-unlabeled-container {
+  width: 100%;
 }
 
 .solute-selectors-container {
