--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -1,31 +1,82 @@
 .toolbar {
+  z-index: 2;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: center;
-  height: 55px;
-  width: 300px;
-  border: 2px solid black;
-  border-radius: 10px;
-  overflow: hidden;
+  height: 51px;
+  width: 296px;
+  overflow: visible;
   padding: 0px;
   margin: 0px;
+}
+
+.toolbar-button-container {
+  z-index: 1;
+  position: relative;
+  flex-shrink: 0;
+  height: 51px;
+  width: 56px;
+  background-color: white;
+  border: 2px solid black;
+  overflow: hidden;
+  transition: background-color 0.3s ease, height 0.2s ease, border-radius 0.05s linear 0.15s;
+}
+
+.toolbar-button-container:hover {
+  background-color: #E7E7E7;
+}
+
+.toolbar-button-container button {
+  top: -2px;
+}
+
+.toolbar-button-container-leftmost {
+  border-radius: 10px 0px 0px 10px;
+}
+
+.toolbar-button-container-inner {
+  border-radius: 0px;
+}
+
+.toolbar-button-container-rightmost {
+  border-radius: 0px 10px 10px 0px;
+}
+
+.toolbar-button-container-dropdown {
+  width: 56px;
+  height: 175px;
+  transition: height 0.2s ease, border-radius 0.05s linear;
+  background-color: #FFF;
+}
+
+.toolbar-button-container-dropdown:hover {
+  background-color: #FFF;
+}
+
+.toolbar-button-container-dropdown-leftmost {
+  border-radius: 10px 0px 10px 10px;
+}
+
+.toolbar-button-container-dropdown-inner {
+  border-radius: 0px 0px 10px 10px;
+}
+
+.toolbar-button-container-dropdown-rightmost {
+  border-radius: 0px 10px 10px 10px;
 }
 
 .toolbar-button {
+  position: relative;
   display: block;
-  width: 20%;
-  height: 100%;
+  width: 100%;
+  height: 55px;
   border: none;
-  background-color: #FFF;
+  background-color: transparent;
   transition: all 0.2s ease;
-  padding: 0px;
+  padding:  10px 10px;
   margin: 0px;
   cursor: pointer;
-}
-
-.toolbar-button:hover {
-  background-color: #E7E7E7;
 }
 
 .toolbar-button img {
@@ -33,7 +84,7 @@
   margin: 0px auto;
   padding: 0px;
   width: auto;
-  height: 60%;
+  height: 90%;
 }
 
 .toolbar-button-active {
@@ -42,4 +93,19 @@
 
 .toolbar-button-active:hover {
   background-color: #222;
+}
+
+.toolbar-dropdown {
+  position: relative;
+  top: -2px;
+  width: 56px;
+  height: 149px;
+}
+
+.toolbar-dropdown-slider {
+  position: relative;
+  top: 25px;
+  left: 26px;
+  width: 30px;
+  height: 70px;
 }
