--- a/src/components/solute-selector/solute-selector.css
+++ b/src/components/solute-selector/solute-selector.css
@@ -1,23 +1,34 @@
-.solute-selector {
-  position: relative;
-  left: 2.5px;
-  top: 2.5px;
-  width: 25px;
-  height: 25px;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
-.solute-selector-border {
-  width: 30px;
-  height: 30px;
-  border-radius: 30px;
+.solute-selector-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33px;
+  height: 33px;
+  border-radius: 100px;
   transition: all 0.2s ease;
   border: 2px solid white;
   margin-right: 6px;
+  background-color: #FFF;
+  cursor: pointer;
+  overflow: visible;
 }
 
-.solute-selector-border-active {
-  border: 2px solid black;
+.solute-selector-container:hover {
+  border-color: #DDD;
+}
+
+.solute-selector-container-active {
+  border-color: #000;
+}
+
+.solute-selector-container-active:hover {
+  border-color: #444;
+}
+
+.solute-selector {
+  flex-shrink: 0;
+  width: 25px;
+  height: 25px;
+  border: none;
+  border-radius: 100px;
 }
