--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,16 +1,16 @@
 .button {
   display: inline-block;
   width: auto;
-  height: 30px;
+  height: auto;
   border: none;
   background-color: #FFF;
   transition: all 0.2s ease;
-  padding: 0px 15px;
+  padding: 5px 10px;
   margin: 0px;
   border: 2px solid black;
   border-radius: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 500;
   cursor: pointer;
 }
