--- a/src/components/selector/selector.css
+++ b/src/components/selector/selector.css
@@ -1,6 +1,6 @@
 .selector {
   display: inline-block;
-  height: 30px;
+  height: auto;
   border: 2px solid black;
   border-radius: 10px;
   padding: 0px;
@@ -9,15 +9,17 @@
 }
 
 .selector-button {
+  flex-grow: 1;
+  flex-shrink: 1;
   width: auto;
-  height: 100%;
+  height: auto;
   border: none;
   background-color: #FFF;
   transition: all 0.2s ease;
-  padding: 0px 15px;
+  padding: 5px 10px;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 500;
   cursor: pointer;
 }
