--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -107,11 +107,16 @@
 }
 
 .solute-selectors-container {
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+}
+
+.solute-selectors-container p {
+  font-weight: 500;
+  font-size: 14px;
+  margin: 0px 10px;
 }
 
 .solute-color-settings-container {
