--- a/src/components/solute-selector/solute-selector.css
+++ b/src/components/solute-selector/solute-selector.css
@@ -9,7 +9,7 @@
   transition: all 0.2s ease;
   border: 2px solid white;
   border-radius: 34px;
-  margin-right: 6px;
+  margin: 0px 3px;
   background-color: #FFF;
   cursor: pointer;
   overflow: visible;
