--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -9,7 +9,6 @@
   margin-left: auto;
   margin-right: auto;
   padding: 2.3vh 4vw;
-  background-color: #FFFFFF;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
@@ -23,22 +22,29 @@
   margin-bottom: 2.5vh;
 }
 
+#header-tools-container {
+  display: flex;
+  width: 80vw;
+  max-width: 600px;
+  justify-content: space-between;
+}
+
 .logo-container {
   position: relative;
   left: -5px;
   height: 49px;
   justify-content: flex-start;
   font-weight: 500;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
 .logo-container a {
-  color: black;
+  color: white;
 }
 
 .logo-container a:active {
-  color: black;
+  color: white;
 }
 
 .logo-container p {
@@ -81,33 +87,33 @@
   padding-bottom: 0;
   max-width: 820px;
   max-height: 820px;
-  border: 2px solid black;
-  border-radius: 20px;
+  border: 2px solid white;
   overflow: hidden;
-  background-color: transparent;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  background-color: #DDD;
 }
 
 #webgl-container-landscape {
   z-index: 10;
   flex-shrink: 0;
   width: 100%;
-  height: calc(78vh - 350px);
-  border: 2px solid black;
-  border-radius: 20px;
+  height: calc(76vh - 350px);
+  border: 2px solid white;
   overflow: hidden;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  background-color: #DDD;
 }
 
 #settings-container-column {
-  flex-shrink: 0;
+  flex-shrink: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  width: 28vw;
-  min-width: 220px;
-  max-width: 320px;
-  margin-left: 3%;
-  padding-right: 1%;
+  width: 100%;
+  max-width: 340px;
+  margin-top: 3px;
+  margin-left: 2%;
   height: 100%;
 }
 
@@ -123,7 +129,7 @@
 
 .settings-spacer {
   height: 100%;
-  width: 10%;
+  width: 5%;
 }
 
 .settings-subcontainer {
@@ -147,11 +153,12 @@
 }
 
 .header-selectors {
-  border: 2px solid black;
-  border-radius: 10px;
+  background-color: #DDD;
+  border: 2px solid white;
   height: 45px;
   padding: 0px 10px;
   margin-right: 4px;
+  box-shadow: rgba(50, 50, 105, 0.45) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
 .solute-selectors-container {
@@ -212,7 +219,7 @@
   top: 2px;
   width: 68px;
   height: 68px;
-  border-radius: 94px;
+  border-radius: 100%;
 }
 
 .solute-color-preview-border {
@@ -220,7 +227,7 @@
   width: 72px;
   height: 72px;
   border: 2px solid black;
-  border-radius: 80px;
+  border-radius: 100%;
   margin-left: 25px;
   margin-bottom: -15px;
 }
@@ -250,7 +257,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.15);
+  background-color: rgba(0,0,0,0.5);
   transition: opacity 0.5s ease;
 }
 
@@ -271,19 +278,19 @@
   z-index: 40;
   margin-left: auto;
   margin-right: auto;
-  width: 50vw;
-  min-width: 550px;
-  max-width: 700px;
-  height: 65vh;
+  width: 30vw;
+  min-width: 450px;
+  max-width: 510px;
+  height: 50vh;
   min-height: 470px;
-  max-height: 700px;
+  max-height: 550px;
   font-weight: 500;
   font-size: 15px;
-  color: #777;
-  background-color: white;
-  border-radius: 30px;
+  color: black;
+  background-color: #DDD;
   padding: 40px 50px;
-  box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
+  border: 2px solid white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   transition: transform 0.5s ease;
 }
 
@@ -304,26 +311,32 @@
 
 .about-overlay-center {
   text-align: center;
+  margin-top: 2px;
 }
 
 #about-overlay-synbim-logo {
-  width: 265px;
-  margin: 0px 20px 40px 0px;
+  width: 200px;
+  margin: 5px 20px 20px 0px;
 }
 
 #about-overlay-epsrc-logo {
-  width: 240px;
-  margin: 10px 0px 50px 30px;
+  width: 190px;
+  margin: 10px 0px 20px 30px;
 }
 
 #about-overlay-uoe-logo {
-  width: 265px;
+  width: 230px;
   margin: 10px 0px 20px 10px;
 }
 
 #about-overlay-biofm-logo {
-  width: 160px;
+  width: 140px;
   margin: 10px 0px 20px 50px;
+}
+
+#about-overlay-ra-logo {
+  width: 80px;
+  margin: 22px 0px 0px 5px;
 }
 
 #about-overlay-source {
@@ -333,16 +346,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50%;
-  max-width: 330px;
-  height: 20%;
-  min-height: 120px;
-  border-radius: 30px;
+  width: 200px;
+  height: 110px;
   cursor: pointer;
   transition: box-shadow 0.5s ease;
-  background-color: #24292e;
-  margin-top: 20px;
+  background-color: #999;
+  border: 2px solid white;
+  margin: 0px 0px 0px 80px;
   overflow: hidden;
+  box-shadow: rgba(50, 50, 105, 0.45) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
 #about-overlay-source:hover {
@@ -356,12 +368,12 @@
 
 #about-overlay-github-logo {
   display: inline-block;
-  width: 175px;
+  width: 145px;
 }
 
 #about-overlay-source-shine {
   position: absolute;
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255,255,255,0.3);
   width: 60px;
   height: 200px;
   top: 0px;
@@ -382,51 +394,71 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 92vw;
-  height: 60vh;
-  background-color: #FFFFFF;
+  width: 100vw;
+  height: 100vh;
   text-align: center;
-  padding: 20vh 4vw;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  color: #000;
+  color: black;
 }
 
 #app-not-supported-container {
+  border: 2px solid white;
+  background-color: #DDD;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  margin-bottom: 5vh;
+  width: 90%;
+  max-width: 400px;
+  height: 90%;
+  max-height: 200px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
-
 #app-not-supported h1 {
-  font-weight: 800;
-  font-size: 8vmin;
+  font-weight: 500;
+  font-size: 25px;
+
 }
 
 #app-not-supported p {
   font-weight: 400;
-  font-size: 5vmin;
-  color: #555;
+  font-size: 13px;
 }
 
-#app-not-supported-logo {
-  margin-bottom: 3vh;
+/* ----- HELPERS ----- */
+
+.gradient-background {
+  background: radial-gradient(rgb(255,200,0) 0%, rgb(100,0,255) 37.5%, rgb(100,255,200) 75%);
+  background-size: 800% 800%;
+  animation: gradient-animation 50s ease infinite;
+  -webkit-animation: gradient-animation 50s ease infinite;
+  -moz-animation: gradient-animation 50s ease infinite;
 }
 
-#app-not-supported-logo img {
-  display: inline-block;
-  width: 10vmin;
+@keyframes gradient-animation { 
+  0%{background-position:20% 20%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
 
-#app-not-supported-logo p {
-  position: relative;
-  bottom: 1vmin;
-  display: inline-block;
-  font-weight: 500;
-  font-size: 3.8vmin;
-  color: #000;
+@-webkit-keyframes gradient-animation {
+  0%{background-position:20% 20%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+@-moz-keyframes gradient-animation {
+  0%{background-position:20% 20%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+.noselect {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
 }
