--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -3,14 +3,17 @@
   width: auto;
   height: auto;
   border: none;
-  background-color: #FFF;
-  transition: all 0.2s ease;
+  background-color: #DDD;
+  transition: all 0.1s ease;
   padding: 6px 10px;
   margin: 0px;
   border: 2px solid black;
-  border-radius: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-size: 11px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #BBB;
 }
