--- a/src/components/selector/selector.css
+++ b/src/components/selector/selector.css
@@ -2,9 +2,7 @@
   display: inline-block;
   height: auto;
   border: 2px solid black;
-  border-radius: 10px;
   padding: 0px;
-  color: #000;
   overflow: hidden;
 }
 
@@ -14,25 +12,26 @@
   width: auto;
   height: auto;
   border: none;
-  background-color: #FFF;
-  transition: all 0.2s ease;
+  background-color: #DDD;
+  transition: all 0.1s ease;
   padding: 6px 10px;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-size: 11px;
   font-weight: 500;
   cursor: pointer;
+  color: black;
 }
 
 .selector-button:hover {
-  background-color: #E7E7E7;
+  background-color: #BBB;
 }
 
 .selector-button-active {
-  background-color: #000;
-  color: #FFF;
+  background-color: black;
+  color: white;
 }
 
 .selector-button-active:hover {
-  background-color: #222;
+  background-color: #444;
 }
