--- a/src/components/solute-selector/solute-selector.css
+++ b/src/components/solute-selector/solute-selector.css
@@ -4,33 +4,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 28px;
-  height: 28px;
-  transition: all 0.2s ease;
-  border: 2px solid white;
-  border-radius: 34px;
+  width: 30px;
+  height: 30px;
+  transition: all 0.1s ease;
+  border: 2px solid #BBB;
+  border-radius: 100%;
   margin: 0px 3px;
-  background-color: #FFF;
+  background-color: transparent;
   cursor: pointer;
   overflow: visible;
 }
 
 .solute-selector-container:hover {
-  border-color: #DDD;
+  border-color: black;
 }
 
 .solute-selector-container-active {
-  border-color: #000;
-}
-
-.solute-selector-container-active:hover {
-  border-color: #444;
+  border-color: black;
 }
 
 .solute-selector {
   flex-shrink: 0;
   flex-grow: 0;
-  width: 24px;
-  height: 24px;
-  border-radius: 100px;
+  width: 26px;
+  height: 26px;
+  border-radius: 100%;
 }
